don't substract caption margins twice, bug 91057, r=karnaze sr=waterson